# ferris-grad

./: .gitignore  Cargo.toml  README.md
examples/: backward_scalar.rs  gpt.rs  rnn.rs  sgd.rs  sgd_with_plotter.rs  tensor_example.rs
src/: engine.rs  lib.rs  main.rs  nn.rs  scalar.rs  tensor.rs
